// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions connectionUpdate 1`] = `
Object {
  "type": "connection",
  "value": true,
}
`;

exports[`actions statusUpdate 1`] = `
Object {
  "type": "status",
  "value": Array [
    "status1",
  ],
}
`;

exports[`actions tokensUpdate 1`] = `
Object {
  "type": "tokens",
  "value": Array [
    "token1",
  ],
}
`;
